data/issues_nolabel/nolabel_test_13634.txt
Failed build tensorflow with bazel, failed with: error SQLite will not work correctly with the -ffast-math option of GCC.

Please go to Stack Overflow for help and support:
https://stackoverflow.com/questions/tagged/tensorflow
If you open a GitHub issue, here is our policy:

It must be a bug or a feature request.
The form below must be filled out.
It shouldn't be a TensorBoard issue. Those go here.

Here's why we have that policy: TensorFlow developers respond to issues. We want to focus on work that benefits the whole community, e.g., fixing bugs and adding features. Support only helps individuals. GitHub also notifies thousands of people when issues are filed. We want them to see you communicating an interesting problem, rather than being redirected to Stack Overflow.

System information

Have I written custom code (as opposed to using a stock example script provided in TensorFlow): No
OS Platform and Distribution (e.g., Linux Ubuntu 16.04): Ubuntu 17.04
TensorFlow installed from (source or binary):
TensorFlow version (use command below): commit: 1ad5e69 master branch
Python version: Python 2.7.13
Bazel version (if compiling from source):  0.6.1
CUDA/cuDNN version:
GPU model and memory:
Exact command to reproduce:
#build tensorflow
bazel build --config=mkl --copt="-g" --copt="-DEIGEN_USE_VML" --copt="-mavx2" --copt="-mfma" --copt="-O3" --verbose_failures  --copt="-Ofast" --copt="-L/opt/intel/gcc/lib64" -s -c opt //tensorflow/tools/pip_package:build_pip_package

You can collect some of this information using our environment capture script:
https://github.com/tensorflow/tensorflow/tree/master/tools/tf_env_collect.sh
You can obtain the TensorFlow version with
python -c "import tensorflow as tf; print(tf.GIT_VERSION, tf.VERSION)"
Describe the problem
Describe the problem clearly here. Be sure to convey here why it's a bug in TensorFlow or a feature request.
During the build process, it failed with the message:
ERROR: /root/.cache/bazel/bazel_root/33016bcb7111d180c7dd9b171742c7e7/external/sqlite_archive/BUILD.bazel:9:1: C++ compilation of rule '@sqlite_archive//:sqlite' failed (Exit 1): gcc failed: error executing command
(cd /root/.cache/bazel/bazel_root/33016bcb7111d180c7dd9b171742c7e7/execroot/org_tensorflow && 
exec env - 
PWD=/proc/self/cwd 
PYTHON_BIN_PATH=/usr/bin/python 
PYTHON_LIB_PATH=/usr/local/lib/python2.7/dist-packages 
TF_NEED_CUDA=0 
TF_NEED_OPENCL=0 
/usr/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -B/usr/bin -B/usr/bin -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 '-D_FORTIFY_SOURCE=1' -DNDEBUG -ffunction-sections -fdata-sections -DEIGEN_USE_VML -g -DEIGEN_USE_VML -mavx2 -mfma -O3 -Ofast -L/opt/intel/gcc/lib64 -MD -MF bazel-out/local-opt/bin/external/sqlite_archive/objs/sqlite/external/sqlite_archive/sqlite3.pic.d -fPIC -iquote external/sqlite_archive -iquote bazel-out/local-opt/genfiles/external/sqlite_archive -iquote external/bazel_tools -iquote bazel-out/local-opt/genfiles/external/bazel_tools -isystem external/sqlite_archive -isystem bazel-out/local-opt/genfiles/external/sqlite_archive -isystem external/bazel_tools/tools/cpp/gcc3 -fno-canonical-system-headers -Wno-builtin-macro-redefined '-D__DATE="redacted"' '-D__TIMESTAMP="redacted"' '-D__TIME__="redacted"' -c external/sqlite_archive/sqlite3.c -o bazel-out/local-opt/bin/external/sqlite_archive/_objs/sqlite/external/sqlite_archive/sqlite3.pic.o)
external/sqlite_archive/sqlite3.c: In function 'sqlite3IsNaN':
external/sqlite_archive/sqlite3.c:28276:3: error: #error SQLite will not work correctly with the -ffast-math option of GCC.
error SQLite will not work correctly with the -ffast-math option of GCC.
^~~~~
Target //tensorflow/tools/pip_package:build_pip_package failed to build
INFO: Elapsed time: 75.602s, Critical Path: 59.11s
FAILED: Build did NOT complete successfully_
Source code / logs
Include any logs or source code that would be helpful to diagnose the problem. If including tracebacks, please include the full traceback. Large logs and files should be attached. Try to provide a reproducible test case that is the bare minimum necessary to generate the problem.